Bug 958249 - The first ::first-letter continuation should display all sides of the border, the following continuations none.  r=dholbert